# simple-game-menu-server

./: Cargo.toml  README.md
src/: main.rs  mongodbc.rs  tools.rs
src/mongodbc/: game.rs  menu.rs  user.rs
