[package]
name = "game-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0"
axum = "0.7.4"
tower = "0.4"
tower-http = {version="0.5.2",features=["full"]}
bson = "2.9.0"
mongodb = "2.8.1"
lazy_static = "1.4.0"
futures = "0.3"
image-base64 = "0.1.0"
uuid = "1.7.0"